--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.3.2",
     "@stripe/stripe-js": "^2.1.11",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.1",
     "clsx": "^2.0.0",
     "inspx": "0.0.1-alpha.6",
